# yew-demo

./: Cargo.toml  index.html
src/: generic.rs  main.rs  router.rs
